2014-01-07  Titus Brown  <t@Titus-MacBook-Air-2.local>

 * Initialized repository, created server.py and README.

2014-01-10  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the HTTP 1.0 response

2014-01-18  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Addressed homework 1 review comments

2014-01-19  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added homework 2 code
 * test_server.py: Added tests for homework 2

2014-01-26  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added homework 3 code
 * test_server.py: Added tests for homework 3

2014-01-30  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * test_server.py: Fixed name of one of the test methods

2014-01-30  Matheus Araujo <araujoma@cse.msu.edu>

 * Really Good code, could improve with main() and get_submit() tests

2014-01-31  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the error page
 * test_server.py: Added the test for the error page

2014-02-04  Jason Lefler <leflerja@arctic.cse.msu.edu>

 * server.py: Added the recv() functionality